--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -1,9 +1,14 @@
 .Head {
   height: 80px;
   background: #f5f5f5;
+  /* display: flex;
+  justify-content: space-between; */
 }
 
 .Head h1 {
   margin: 0;
   padding: 20px 20px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
