--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -21,6 +21,7 @@
 .Item-actions {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 33px;
   padding: 20px 20px 20px 10px;
 }
