--- a/src/components/modal-content/style.css
+++ b/src/components/modal-content/style.css
@@ -1,6 +1,26 @@
+.Modal-header {
+  background: rgb(245, 245, 245);
+  padding: 20px 0px 23px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.Modal-header h2 {
+  margin: 0;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 37px;
+}
+
 .Modal-content {
-  flex-basis: calc(100% - 460px);
+  flex-basis: 960px;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.Modal-content footer {
+  padding: 20px 120px 89px;
 }
