fix styles && plural && price view

--- a/src/components/modal-content/style.css
+++ b/src/components/modal-content/style.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   border-radius: 10px 10px 0px 0px;
+  margin-bottom: 71px;
 }
 
 .Modal-header h2 {
