--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -9,6 +9,10 @@
   inset: 0;
 }
 
+.Modal-content {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
 .visually-hidden {
   position: absolute; 
   width: 1px;
