--- a/src/components/item-basket/style.css
+++ b/src/components/item-basket/style.css
@@ -13,6 +13,12 @@
 .ItemBasket-title {
   width: 100%;
   padding: 20px 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.ItemBasket:hover {
+  text-decoration: underline;
 }
 
 .ItemBasket-right {
