--- a/src/components/pagination/styles.css
+++ b/src/components/pagination/styles.css
@@ -11,20 +11,25 @@
 }
 
 .pagination-list_button {
+  width: 100%;
   cursor: pointer;
   border: none;
   color: inherit;
+  padding: 0;
+  margin: 0;
   background-color: inherit;
   font-size: 16px;
   font-weight: 400;
   line-height: 18px;
 }
 
-.pagination-list_button-active {
+.pagination-list_item-active {
+  width: 18px;
+  height: 18px;
   color: rgb(255, 255, 255);
   background-color: rgb(0, 135, 233);
 }
 
-.pagination-list_button:hover {
+.pagination-list_item:hover {
   background-color: rgb(225, 225, 225);
 }
