--- a/src/components/pagination/styles.css
+++ b/src/components/pagination/styles.css
@@ -30,6 +30,10 @@
   background-color: rgb(0, 135, 233);
 }
 
-.pagination-list_item:hover {
+.pagination-list_button:hover {
   background-color: rgb(225, 225, 225);
+}
+
+.pagination-list_item-active .pagination-list_button:hover {
+  background-color: inherit;
 }
