add fixes for item && store

--- a/src/components/pagination/styles.css
+++ b/src/components/pagination/styles.css
@@ -1,7 +1,10 @@
 .pagination-list {
+  margin: 0;
+  padding: 24px 21px 0 0;
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: end;
   gap: 2px;
 }
 
