--- a/src/components/pagination/styles.css
+++ b/src/components/pagination/styles.css
@@ -1,6 +1,6 @@
 .pagination-list {
   margin: 0;
-  padding: 24px 21px 0 0;
+  padding: 24px 21px 200px 0;
   list-style: none;
   display: flex;
   align-items: center;
