--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -16,3 +16,16 @@
   margin: 0;
   padding: 20px 0 10px;
 }
+
+.Header-head {
+  display: flex;
+  padding: 10px 20px;
+  align-items: center;
+  justify-content: end;
+  gap: 20px;
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+}
