--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: nowrap;
   padding: 0 15px;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
 }
 
@@ -23,6 +23,7 @@
   align-items: center;
   justify-content: end;
   gap: 20px;
+  border-bottom: 1px solid rgb(220, 220, 220);
 }
 
 .form-label {
