--- a/src/components/basket-tool/style.css
+++ b/src/components/basket-tool/style.css
@@ -2,11 +2,9 @@
 .BasketTool {
   display: flex;
   justify-content: flex-end;
+  align-items: baseline;
   padding: 20px;
   font-size: 18px;
-}
-
-.BasketTool-label {
 }
 
 .BasketTool-total {
