fix reset errors && login route && style

--- a/src/components/login-form/style.css
+++ b/src/components/login-form/style.css
@@ -9,6 +9,17 @@
   gap: 17px;
 }
 
+.Form-input {
+  width: 203px;
+  height: 26px;
+}
+
 .Form-feedback {
   color: #ff0000;
+}
+
+.form-label {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
 }
