--- a/src/components/login-form/style.css
+++ b/src/components/login-form/style.css
@@ -10,8 +10,10 @@
 }
 
 .Form-input {
+  display: block;
+  padding: 0;
   width: 203px;
-  height: 26px;
+  padding: 3px 3px 5px;
 }
 
 .Form-feedback {
