--- a/src/components/comment/style.css
+++ b/src/components/comment/style.css
@@ -36,3 +36,28 @@ p {
   color: rgb(0, 135, 233);
   text-decoration: underline;
 }
+
+.Comments-title {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 25px;
+}
+
+.Comment-exists {
+  margin-top: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.Comment-cancel {
+  background-color: inherit;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: rgb(102, 102, 102);
+}
