--- a/src/components/comment-input/style.css
+++ b/src/components/comment-input/style.css
@@ -17,6 +17,7 @@ p {
 }
 
 .CommentForm-input {
+  box-sizing: border-box;
   width: 100%;
   height: 74px;
   font-family: Arial;
@@ -24,10 +25,7 @@ p {
   font-weight: 400;
   line-height: 16px;
   resize: none;
-}
-
-.CommentForm-input:focus-visible {
-  outline: 1px solid rgb(102, 102, 102);
+  border: 1px solid rgb(102, 102, 102);
   box-shadow: inset 0px 1px 4px 0px rgba(102, 102, 102, 0.1);
 }
 
