--- a/src/components/comment/style.css
+++ b/src/components/comment/style.css
@@ -26,6 +26,7 @@ p {
   padding: 10px 0 10px;
   line-height: 16px;
   font-size: 14px;
+  word-wrap: break-word;
 }
 
 .Comment-reply {
@@ -60,4 +61,8 @@ p {
   font-weight: 400;
   line-height: 18px;
   color: rgb(102, 102, 102);
+}
+
+.Nav-link {
+  color: rgb(0, 135, 233);
 }
