--- a/src/components/comments/style.css
+++ b/src/components/comments/style.css
@@ -1,3 +1,40 @@
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+.feedback {
+  margin: 20px 0 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.feedback-cancel {
+  background-color: inherit;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: rgb(102, 102, 102);
+}
+
 .Comments-container {
-  padding: 30px 40px;
+  padding: 30px 30px 100px;
+}
+
+.Comment-item {
+  color: rgb(0, 0, 0);
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
+}
+
+.Comment-item:not(:last-child) {
+  padding-bottom: 30px; 
 }
